# asshole-dog

./: .gitignore  ExcelAPINotes.md  README.md  docker-compose.yml  logo.xcf
backend/: .env  Cargo.toml
backend/migrations/2019-08-31-135931_create_timestamps_table/: down.sql  up.sql
backend/src/: excel.rs  main.rs  schema.rs
backend/src/actions/: add_timestamp.rs  get_timestamps.rs  mod.rs
backend/src/models/: mod.rs  timestamp.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/: index.html
