[package]
name = "backend"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
uuid = "0.7.4"
dotenv = "0.14.1"
futures = "0.1.28"
tracing = "0.1.7"
actix-cors = "0.1.0"

[dependencies.chrono]
version = "0.4.7"
features = [ "serde" ]

[dependencies.diesel]
version = "1.4.2"
features = ["r2d2", "postgres", "chrono", "uuidv07"]
