[package]
name = "backend"
version = "0.1.0"
authors = ["James Waples <jamwaffles@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
dotenv = "0.14.1"
futures = "0.1.28"
actix-cors = "0.1.0"
log = "0.4.8"
pretty_env_logger = "0.3.1"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.7.4"

[dependencies.chrono]
version = "0.4.7"
features = [ "serde" ]

[dependencies.diesel]
version = "1.4.2"
features = ["r2d2", "postgres", "chrono", "uuidv07", "serde_json"]
